@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.037.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -13,7 +13,6 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "Asset-Pack",
-  "EXE_FILES" => [],
   "LICENSE" => "perl",
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Asset::Pack",
@@ -32,7 +31,7 @@ my %WriteMakefileArgs = (
     "File::Spec" => 0,
     "Test::Differences" => 0,
     "Test::Fatal" => 0,
-    "Test::More" => "0.89",
+    "Test::More" => 0,
     "Test::TempDir::Tiny" => 0
   },
   "VERSION" => "0.000007",
@@ -51,7 +50,7 @@ my %FallbackPrereqs = (
   "Path::Tiny" => "0.069",
   "Test::Differences" => 0,
   "Test::Fatal" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "Test::TempDir::Tiny" => 0,
   "Try::Tiny" => 0,
   "parent" => 0,
