@@ -241,7 +241,7 @@ Kent Fredric <kentnl@cpan.org>
 
 =head1 COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2015 by James Laver on time generously donated by Anomalio.
+This software is copyright (c) 2017 by James Laver on time generously donated by Anomalio.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
