@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.000007
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.000006 2015-07-21T13:10:16Z
  [Removed / test requires]
